fix #98 search icon always as outline
* and move x button to not overlap with search icon

--- a/app/root.css
+++ b/app/root.css
@@ -166,7 +166,7 @@ svg * {
 }
 
 .icon-link:not(:hover) svg *:not(path[style*='fill:#333'], path[style*='fill: rgb(51, 51, 51)']),
-.searchbar input:not(:hover, :focus) + svg circle {
+.searchbar input + svg circle {
   fill: transparent !important;
 }
 
@@ -307,7 +307,9 @@ article.expanded:not(.link-hovered) h2:hover::after {
   border: 1px solid var(--bgColorQuestionTitle);
 }
 
-tr:nth-child(even){background-color: var(--bgColorTableRows);}
+tr:nth-child(even) {
+  background-color: var(--bgColorTableRows);
+}
 
 .answer table p {
   margin: 0;
@@ -427,6 +429,9 @@ footer > *:not(:last-child) {
   border-radius: 4px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
+.searchbar input::-webkit-search-cancel-button {
+  margin-right: 35px;
+}
 
 .searchbar svg {
   position: absolute;
@@ -526,7 +531,7 @@ a:focus-visible,
     --colorLink: #89e3ff;
     --colorLinkVisited: #79f;
   }
- 
+
   svg path[style*='fill:#333'],
   svg path[style*='fill: rgb(51, 51, 51)'],
   article > h2::after {
